# vibecheck

./: .gitignore  Makefile  README.md  deploy-local.sh
.github/workflows/: ci.yml
api/: .env-example  Dockerfile  app.py  pyproject.toml
backend/: .env-example  app.py  pyproject.toml
backend/tests/: test_api.py
frontend/: .dockerignore  .env-example  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/info/: route.ts
frontend/src/app/api/poll/: route.ts
frontend/src/app/api/results/: route.ts
frontend/src/components/: poll-card.tsx
k8s/: hpa.yaml
k8s/policies/: deny-privileged.yaml  require-labels.yaml  require-resources.yaml
monitoring/grafana/: dashboard.json  datasource.yml
monitoring/prometheus/: prometheus.yml
terraform/: .env-example  main.tf  outputs.tf  variables.tf
terraform/modules/config-map/: main.tf  variables.tf
terraform/modules/deployment/: main.tf  variables.tf
terraform/modules/kubernetes-namespace/: main.tf  variables.tf
terraform/modules/service/: main.tf  variables.tf
web/: .env.example  Dockerfile  pnpm-lock.yaml
web/src/app/: layout.tsx  page.tsx
web/src/app/api/info/: route.ts
web/src/app/api/poll/: route.ts
web/src/app/api/results/: route.ts
web/src/components/: poll-card.tsx
